got cart to finally work correct;y, now styling scrollbar

--- a/src/layout/Footer.module.css
+++ b/src/layout/Footer.module.css
@@ -6,7 +6,7 @@
     max-width: 100%;
     padding: var(--padding);
     height: fit-content;
-    margin: 3rem auto 0 auto;
+    /* margin: 3rem auto 0 auto; */
     background-color:  rgb(246, 187, 116);
     /* border: 2px red solid; */
 }
